# cusa

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
npm/: README.md  handoff.md  package.json  postinstall.js
npm/lib/: args.js  download.js  login.js  logs.js  node.js  platform.js
npm/tests/: args.test.js  download.test.js  login.test.js  logs.test.js  node.test.js  platform.test.js  postinstall.test.js  prepack.test.js
scripts/: build-release.sh  check-headers.sh  check-headers.test.sh  prepack.js  run-all-tests.sh  vendor-codex-ui.sh
sidecar/: handoff-phase-e.md  handoff.md  package-lock.json  package.json  tsconfig.json
sidecar/scripts/: theta-grid.ts
sidecar/src/: index.test.ts  index.ts
sidecar/src/agent/: sdkAdapter.fake.ts  sdkAdapter.ts  session.test.ts  session.ts
sidecar/src/approval/: gating.test.ts  policy.test.ts  policy.ts
sidecar/src/config/: apiKey.test.ts  apiKey.ts  conversation.test.ts  conversation.ts
sidecar/src/context/: feature_detect.test.ts  feature_detect.ts  format.test.ts  format.ts  history.test.ts  history.ts  index.ts  session_integration.test.ts  strategy.test.ts  strategy.ts  summarizer.test.ts  summarizer.ts
sidecar/src/logging/: rotate.test.ts  rotate.ts
sidecar/src/mcp/: index.ts  loader.test.ts  loader.ts  session.test.ts  types.ts
sidecar/src/router/: config.ts  evalCapture.test.ts  evalCapture.ts  evalSeed.test.ts  index.ts  llm.ts  localClassifier.test.ts  localClassifier.ts  modelResolver.test.ts  modelResolver.ts  router.test.ts  rules.ts  superAuto.test.ts  types.ts
sidecar/src/router/__fixtures__/: eval-seed.jsonl
sidecar/src/rpc/: schema.test.ts  schema.ts  server.test.ts  server.ts
sidecar/src/skills/: discover.test.ts  discover.ts  index.ts  inject.test.ts  inject.ts
sidecar/src/usage/: accumulator.test.ts  accumulator.ts
specs/: 20260706-codex-tui-cherry-pick.md  20260706-cusa-cli.md  20260706-cusa-cli.traceability.md
tui/: Cargo.toml  handoff-phase-d.md  handoff.md
tui/crates/cusa-rpc/: Cargo.toml
tui/crates/cusa-rpc/src/: lib.rs
tui/src/: lib.rs  logging.rs  main.rs
tui/src/app/: approval.rs  context.rs  events.rs  footer.rs  input.rs  internal.rs  login.rs  mcp.rs  mod.rs  model_picker.rs  overlay.rs  resume.rs  selection.rs  skills.rs  slash.rs  startup.rs  state.rs  status.rs  transcript.rs  usage.rs
tui/src/codex_adapter/: bottom_pane.rs  composer.rs  mod.rs  shim.rs  status_chrome.rs  terminal_probe.rs  tool_display.rs  transcript.rs  types.rs  view_model.rs  welcome.rs
tui/src/codex_ui/: mod.rs
tui/src/config/: api_key.rs  mod.rs  paths.rs
tui/src/session_store/: mod.rs  store.rs  types.rs
tui/src/sidecar/: client.rs  events.rs  locator.rs  mod.rs  supervisor.rs  transport.rs
tui/src/terminal/: mod.rs
tui/tests/: headers.rs  snapshots.rs
tui/tests/snapshots/: snapshots__spec_108_tool_diff_block.snap  snapshots__spec_108_tool_exec_block.snap  snapshots__spec_109_status_chrome_idle_80x24.snap  snapshots__spec_110_p0_foundation_idle_frame_120x40.snap  snapshots__spec_110_p0_foundation_idle_frame_120x40.snap.new  snapshots__spec_110_p0_foundation_idle_frame_80x24.snap  snapshots__spec_110_p0_foundation_idle_frame_80x24.snap.new  snapshots__spec_110_p1_composer_idle.snap  snapshots__spec_110_p1_composer_idle.snap.new  snapshots__spec_110_p2_transcript_mixed.snap
