[workspace]
resolver = "2"
members = [
    "tui",
    "tui/crates/cusa-rpc",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/cusa-cli/cusa"
authors = ["cusa contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "signal", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
ratatui = "0.29"
crossterm = "0.28"
