[workspace]
resolver = "2"
members = [
    "tui",
    "tui/crates/cusa-rpc",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cusa-cli/cusa"
authors = ["cusa contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "signal", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
# Codex TUI foundation (SPEC-114): scrolling-regions + unstable widget/render APIs.
ratatui = { version = "0.29", features = [
    "scrolling-regions",
    "unstable-widget-ref",
    "unstable-rendered-line-info",
] }
crossterm = "0.28"
derive_more = { version = "2", features = ["is_variant"] }
unicode-width = "0.2"
unicode-segmentation = "1"
supports-color = "3"
