[package]
name = "cusa-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "cusa terminal UI (Rust/Ratatui) — Cursor SDK-powered coding CLI"

[[bin]]
name = "cusa-tui"
path = "src/main.rs"

[dependencies]
cusa-rpc = { path = "crates/cusa-rpc" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
