[package]
name = "cusa-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "JSON-RPC schema shared between cusa-tui and cusa-sidecar"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
